homeworks/mihailov_sa/HW5/firewall.tf
resource "aws_security_group" "firewall" {
  name        = "firewall"
  description = "Allow icmp ping"
  vpc_id      = aws_vpc.vpc_test.id

  ingress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    protocol    = "icmp"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ALLOW ICMP"
  }
}
